# RegisLex

./: .gitignore  CMakeLists.txt  README.md  build-linux-release.sh  build-win-release.bat  clean.sh  cmake-output-from-console.txt  install.sh  out.txt
build-linux/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake
build-release/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RegisLex.slnx  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  regislex-cli.vcxproj  regislex-cli.vcxproj.filters  regislex.vcxproj  regislex.vcxproj.filters  regislex_core.vcxproj  regislex_core.vcxproj.filters
dist-linux/: VERSION.txt  regislex.service  regislex.sh  start-server.sh
dist-linux/include/database/: database.h
dist-linux/include/platform/: platform.h
dist-linux/include/regislex/modules/elm/: elm.h
dist-linux/include/regislex/modules/workflow/: workflow.h
include/regislex/: regislex.h
include/regislex/modules/case_management/: case.h
include/regislex/modules/deadline_management/: deadline.h
include/regislex/modules/document_management/: document.h
include/regislex/modules/legislative_tracking/: legislative.h
include/regislex/modules/reporting/: reporting.h
src/: main.c
src/api/: auth.c  handler.c  json_utils.c  rest_api.c  router.c  server.c
src/cli/: cli_main.c  commands.c
src/core/: auth.c  config.c  error.c  logger.c  memory.c  regislex.c  string_utils.c  time_utils.c  uuid.c
src/database/: database.c  migration.c  query_builder.c  sqlite_driver.c
src/modules/case_management/: case.c  case_repository.c  matter.c  party.c
src/modules/deadline_management/: calendar.c  deadline.c  reminder.c  statute_limitations.c
src/modules/document_management/: document.c  document_manager.c  search.c  storage.c  template_engine.c  version_control.c
src/modules/elm/: billing.c  contract.c  elm_core.c  elm_manager.c  risk.c  vendor.c
src/modules/legislative_tracking/: alert.c  legislation.c  legislative_tracker.c  stakeholder.c  tracker.c
src/modules/reporting/: data_source.c  export.c  report_engine.c  report_template.c
src/modules/workflow/: action.c  task.c  template.c  trigger.c  workflow_engine.c
src/platform/: filesystem.c  network.c  platform.c  threading.c
src/utils/: crypto.c  csv.c  json.c  pdf.c  validation.c  xml.c
tests/: CMakeLists.txt  test_main.c
